--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
 aniso8601==9.0.1
+autopep8==1.6.0
+black==22.6.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.1.3
 Flask==2.1.2
+Flask-JWT-Extended==4.4.1
 Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
+pycodestyle==2.8.0
+PyJWT==2.4.0
 pytz==2022.1
+requests==2.28.1
 six==1.16.0
-Werkzeug==2.1.2
+SQLAlchemy==1.4.37
+toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.3.0
+urllib3==1.26.10
+Werkzeug==2.0.0
 zipp==3.8.0
